Refactor and localize port scanner comments
Updated comments in all classes to Russian for localization and clarity. Refactored PortServiceRegistry to use Map.ofEntries for cleaner initialization. Minor code improvements for readability and maintainability.